# MLOPS_project_network_Security_system

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CLOUD_INTEGRATION_SUMMARY.md  CLOUD_MLOPS_SETUP.md  DEPLOY_TO_HF.md  Dockerfile  HF_SECRETS_SETUP.md  README.md  app.py  cloud_config.py  data_to_mongo.py  docker-compose.monitoring.yml  load_data_to_sqlite.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_cloud_mlops.py  startup.sh  trigger_prefect_training.py
.github/workflows/: main.yml
Network_Security_system.egg-info/: PKG-INFO  SOURCES.txt
browser-extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
final_model/: preprocessor.pkl
monitoring/: evidently_monitor.py
monitoring/prometheus/: prometheus.yml
prefect_flows/: deploy_schedule.py  drift_monitoring_flow.py  training_flow.py
src/cloud/: s3_syncer.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/constant/training_pipeline/: __init__.py
src/data/: sqlite_manager.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: exception.py
src/logging/: logger.py
src/pipeline/: training_pipeline.py
src/utils/main_utils/: utils.py
src/utils/ml_utils/metric/: classification_metric.py
src/utils/ml_utils/model/: estimator.py
